--- a/omod/src/main/resources/apps/patient_dashboard_app.json
+++ b/omod/src/main/resources/apps/patient_dashboard_app.json
@@ -59,7 +59,7 @@
       "widget": "latestobsforconceptlist",
       "icon": "icon-user-md",
       "label": "ART STATUS",
-      "concepts": "dce12b4f-30ab-102d-86b0-7a5022ba4115,ab505422-26d9-41f1-a079-c3d222000440,c3332e8d-2548-4ad6-931d-6855692694a3,cc3d64df-61a5-4c5a-a755-6e95d6ef3295,c17bd9df-23e6-4e65-ba42-eb6d9250ca3f,d65cfbee-ba13-4cba-aa5c-2a6438219a90"
+      "concepts": "dce12b4f-30ab-102d-86b0-7a5022ba4115,ab505422-26d9-41f1-a079-c3d222000440,c3332e8d-2548-4ad6-931d-6855692694a3,cc3d64df-61a5-4c5a-a755-6e95d6ef3295,c17bd9df-23e6-4e65-ba42-eb6d9250ca3f,d65cfbee-ba13-4cba-aa5c-2a6438219a90,dce00b87-30ab-102d-86b0-7a5022ba4115"
     },
     "requiredPrivilege": "App: ugandaemr.widget.artStatus",
     "extensions": [
