--- a/api/pom.xml
+++ b/api/pom.xml
@@ -194,7 +194,13 @@
 			<groupId>org.json</groupId>
 			<artifactId>json</artifactId>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.glassfish.web</groupId>
+			<artifactId>javax.el</artifactId>
+			<version>2.2.4</version>
+			<scope>provided</scope>
+		</dependency>
+    </dependencies>
 
 	<build>
 		<resources>
