--- a/api/src/main/resources/openmrs-distro.properties
+++ b/api/src/main/resources/openmrs-distro.properties
@@ -55,3 +55,45 @@ omod.patientflags=${patientFlagsVersion}
 omod.ugandaemrsync=${ugandaemrSyncVersion}
 omod.patientqueueing=${patientqueueingVersion}
 omod.cohort=${cohortModuleVersion}
+omod.spa=${spaModuleVersion}
+
+spa.frontendModules.@openmrs/esm-devtools-app=3.2.0
+spa.frontendModules.@openmrs/esm-implementer-tools-app=3.2.0
+spa.frontendModules.@openmrs/esm-login-app=3.2.0
+spa.frontendModules.@openmrs/esm-primary-navigation-app=3.2.0
+spa.frontendModules.@openmrs/esm-offline-tools-app=3.2.0
+spa.frontendModules.@openmrs/esm-active-visits-app=3.1.0
+spa.frontendModules.@openmrs/esm-form-entry-app=3.1.0
+spa.frontendModules.@openmrs/esm-home-app=3.1.1
+spa.frontendModules.@openmrs/esm-patient-allergies-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-appointments-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-attachments-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-banner-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-biometrics-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-chart-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-clinical-view-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-conditions-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-forms-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-immunizations-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-list-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-medications-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-notes-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-programs-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-registration-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-search-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-test-results-app=3.1.0
+spa.frontendModules.@openmrs/esm-patient-vitals-app=3.1.0
+spa.frontendModules.@openmrs/esm-refapp-styleguide-app=1.0.2
+spa.frontendModules.@openmrs/esm-refapp-navigation-app=1.0.1
+spa.frontendModules.@openmrs/esm-user-dashboard-app=1.0.1
+spa.frontendModules.@openmrs/esm-patient-queue-app=3.0.2
+spa.frontendModules.@openmrs/esm-dispensing-app=1.0.0-pre.4
+spa.frontendModules.@openmrs/esm-drugorder-app=0.4.0
+spa.frontendModules.@openmrs/esm-outpatient-app=3.1.0
+spa.frontendModules.@openmrs/esm-generic-patient-widgets-app=3.1.0
+
+spa.core=3.2.0
+spa.spaPath=/openmrs/spa/
+spa.apiUrl=/openmrs/
+spa.configUrls=[]
+spa.importmap=importmap.json
