--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,8 @@
 		<ugandaemrSyncVersion>1.1.4</ugandaemrSyncVersion>
 		<ugandaemrfingerprintVersion>1.0.11</ugandaemrfingerprintVersion>
 		<cohortModuleVersion>2.2.1</cohortModuleVersion>
+		<spaModuleVersion>1.0.8</spaModuleVersion>
+		<spa.version>next</spa.version>
 
 		<!-- core configuration library -->
 		<ugandaemrReportsVersion>2.0.31</ugandaemrReportsVersion>
@@ -478,6 +480,13 @@
 				<artifactId>json</artifactId>
 				<version>20160810</version>
 				<type>jar</type>
+			</dependency>
+
+			<dependency>
+				<groupId>org.openmrs.module</groupId>
+				<artifactId>spa-omod</artifactId>
+				<version>${spaModuleVersion}</version>
+				<type>provided</type>
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
