--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
 	<groupId>org.openmrs.module</groupId>
 	<artifactId>ugandaemr</artifactId>
-	<version>3.3.8-SNAPSHOT</version>
+	<version>4.0.0-SNAPSHOT</version>
 	<packaging>pom</packaging>
 	<name>UgandaEMR</name>
 	<description>Customizations for Uganda OpenMRS distribution</description>
@@ -93,7 +93,7 @@
 		<junitParamsVersion>1.0.4</junitParamsVersion>
 		<legacyuiVersion>1.8.4</legacyuiVersion>
 		<metadatadeployVersion>1.13.0</metadatadeployVersion>
-		<metadatamappingVersion>1.4.0</metadatamappingVersion>
+		<metadatamappingVersion>1.5.0</metadatamappingVersion>
 		<metadatasharingVersion>1.8.0</metadatasharingVersion>
 		<openconceptlabVersion>1.2.9</openconceptlabVersion>
 		<openwebappsVersion>1.13.0</openwebappsVersion>
@@ -117,7 +117,8 @@
 		<ugandaemrfingerprintVersion>1.0.11</ugandaemrfingerprintVersion>
 		<cohortModuleVersion>2.2.1</cohortModuleVersion>
 		<spaModuleVersion>1.0.8</spaModuleVersion>
-		<spa.version>next</spa.version>
+		<queueModuleVersion>1.0.0-SNAPSHOT</queueModuleVersion>
+		<spa.version>latest</spa.version>
 
 		<!-- core configuration library -->
 		<ugandaemrReportsVersion>2.0.31</ugandaemrReportsVersion>
