adding UgandaEMR ESM to Distro

--- a/api/src/main/resources/openmrs-distro.properties
+++ b/api/src/main/resources/openmrs-distro.properties
@@ -86,6 +86,7 @@ spa.frontendModules.@openmrs/esm-patient-vitals-app=3.1.0
 spa.frontendModules.@openmrs/esm-patient-queue-app=3.0.2
 spa.frontendModules.@openmrs/esm-outpatient-app=3.1.0
 spa.frontendModules.@openmrs/esm-generic-patient-widgets-app=3.1.0
+spa.frontendModules.@ugandaemr/esm-ugandaemr-app=0.1.0
 
 spa.core=3.2.0
 spa.spaPath=/openmrs/spa/
